<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/filter_layout"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:text="@string/textView_check_console"/>

    <LinearLayout
            android:id="@+id/filter_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_subscribe_in_foreground">

        <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_filter_settings"/>

        <EditText
                android:id="@+id/editText_namespace"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_namespace"/>

        <EditText
                android:id="@+id/editText_type"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_type"/>

    </LinearLayout>

    <Button
            android:id="@+id/button_subscribe_in_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/button_subscribe_in_foreground"/>

    <Button
            android:id="@+id/button_subscribe_in_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button_subscribe_in_foreground"
            android:text="@string/button_subscribe_in_background"/>

    <Button
            android:id="@+id/unsubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button_subscribe_in_background"
            android:text="@string/button_unsubscribe"/>

</RelativeLayout>